	with as.is = TRUE.

    o	predict.mlm ignored newdata (PR#1226) and also offsets.

    o	demo(tkttest) was inadvertently changed in 1.4.0 so that it would
	evaluate the requested test, but not display the result.

    o	stars(scale = TRUE) (the default) now works as documented (and
	as S does).  Previously it only scaled the maximum to 1. (PR#1230)

    o	data.matrix(data.frame(a=0)[0,0]) now works.

    o	plot(multiple time series, plot.type = "single") was computing
	`ylim' from the first series only.

    o	plot.acf() has a new `xpd = par("xpd")' argument which by default
	*does* clipping (of the horizontal lines) as desired (xpd = NA was
	used before, erronously in most cases).

    o	predict(smooth.spline(.), deriv = 1) now works.

    o	identify() failed when x is a structure/matrix. (PR#1238)

    o	getMethod returns NULL when optional=TRUE as promised in the
	documentation.

    o	setMethod allows "..." to be one of the arguments omitted in
	the method definition (but so far no check for ... being missing)

    o	Allow round() to work again on very large numbers (introduced
	in fixing PR#1138). (PR#1254)

    o	Rinternals.h is now accepted by a C++ compiler.

    o	type.convert() was failing to detect integer overflow.

    o	piechart() was defaulting to foreground colour (black) fills
	rather than background (as used in 1.3.1 and earlier).	Now
	background is used, but be aware that as from 1.4.0 this may
	be transparent.

    o	La.eigen(*, only.values=TRUE) does not segfault anymore in one
	branch (PR#1262).



		CHANGES IN R VERSION 1.4.0


USER-VISIBLE CHANGES

    [This is a new section to highlight changes in behaviour, which
    may be given in more detail in the following sections.
    Many bug fixes are also user-visible changes.]

    o	The default save format has been changed, so saved workspaces
	and objects cannot (by default) be read in earlier versions of R.

    o	The number of bins selected by default in a histogram uses