@@ -74,7 +74,9 @@ x30 <- {
 }
 all(dim(x30) == c(3,0))
 x01 <- x[-(1:3), , drop = FALSE]
+x00 <- x01[,-1]
 all(dim(x01) == 0:1)
+all(dim(x00) == 0)
 all(dim(x) == dim(rbind(x, x01)))
 ## bugs up to 1.2.3 :
 all(dim(x30) == dim(m30 <- as.matrix(x30)))
@@ -82,11 +84,12 @@ all(dim(x01) == dim(m01 <- as.matrix(x01)))
 all(dim(x30) == dim(as.data.frame(m30)))
 all(dim(x01) == dim(as.data.frame(m01)))
 all(dim(x01) == dim(   data.frame(m01)))
-## *still* bug in data.frame() -- need to fix unlist(.) ??!
-if(FALSE){
 all(dim(x30) == dim(   data.frame(m30)))
-all(dim(x) == dim(cbind(x, x30)))
-}
+all(dim(x)   == dim(cbind(x, x30)))
+## up to 1.4.0 :
+all(dim(x30) == dim( data.matrix(x30)))
+all(dim(x00) == dim( data.matrix(x00)))
+
 
 ### Subsetting
 
