@@ -1,6 +1,6 @@
 
-R : Copyright 2001, The R Development Core Team
-Version 1.3.0 Under development (unstable) (2001-06-13)
+R : Copyright 2002, The R Development Core Team
+Version 1.4.0 Patched (2002-01-15)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -117,7 +117,10 @@ Type `q()' to quit R.
 > all(dim(x30) == c(3,0))
 [1] TRUE
 > x01 <- x[-(1:3), , drop = FALSE]
+> x00 <- x01[,-1]
 > all(dim(x01) == 0:1)
+[1] TRUE
+> all(dim(x00) == 0)
 [1] TRUE
 > all(dim(x) == dim(rbind(x, x01)))
 [1] TRUE
@@ -132,11 +135,16 @@ Type `q()' to quit R.
 [1] TRUE
 > all(dim(x01) == dim(   data.frame(m01)))
 [1] TRUE
-> ## *still* bug in data.frame() -- need to fix unlist(.) ??!
-> if(FALSE){
-+ all(dim(x30) == dim(   data.frame(m30)))
-+ all(dim(x) == dim(cbind(x, x30)))
-+ }
+> all(dim(x30) == dim(   data.frame(m30)))
+[1] TRUE
+> all(dim(x)   == dim(cbind(x, x30)))
+[1] TRUE
+> ## up to 1.4.0 :
+> all(dim(x30) == dim( data.matrix(x30)))
+[1] TRUE
+> all(dim(x00) == dim( data.matrix(x00)))
+[1] TRUE
+> 
 > 
 > ### Subsetting
 > 
